2019-11-30  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.4.0

2019-11-26  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.3.12

2019-10-30  T.Küchel  <devel@zukuul.de>

	* new upstream php version: 7.3.11

2019-10-21  T.Küchel  <devel@zukuul.de>

	* new upstream version

2019-10-07  T.Küchel  <devel@zukuul.de>

	* new upstream php version
