@@ -13,16 +13,16 @@ git commit -a -m"limesurvey version: $version; php version: $php_version"
 docker pull php:apache
 docker inspect php:apache | grep RepoTags -A 3
 git_log=$(git log --oneline | head -1 | cut -d " " -f 1)
-echo "Press enter to build with: docker build -t hgkvplan/linuxmuster-survey:$php_version-$git_log ."
+echo "Press enter to build with: docker build -t linuxmuster/survey:$php_version-$git_log ."
 read
-docker build -t hgkvplan/linuxmuster-survey:$php_version-$git_log .
-docker tag hgkvplan/linuxmuster-survey:$php_version-$git_log hgkvplan/linuxmuster-survey:latest
+docker build -t linuxmuster/survey:$php_version-$git_log .
+docker tag linuxmuster/survey:$php_version-$git_log linuxmuster/survey:latest
 echo "Try if :latest works for you. Then press enter to tag and upload using"
-echo "docker tag hgkvplan/linuxmuster-survey:$php_version-$git_log hgkvplan/linuxmuster-survey:working"
-echo "docker push hgkvplan/linuxmuster-survey:$php_version-$git_log ; docker push hgkvplan/linuxmuster-survey:latest"
+echo "docker tag linuxmuster/survey:$php_version-$git_log linuxmuster/survey:working"
+echo "docker push linuxmuster/survey:$php_version-$git_log ; docker push linuxmuster/survey:latest"
 read
-docker tag hgkvplan/linuxmuster-survey:$php_version-$git_log hgkvplan/linuxmuster-survey:working
-docker push hgkvplan/linuxmuster-survey:$php_version-$git_log ; docker push hgkvplan/linuxmuster-survey:latest
+docker tag linuxmuster/survey:$php_version-$git_log linuxmuster/survey:working
+echo docker push linuxmuster/survey:$php_version-$git_log ; docker push linuxmuster/survey:latest
 echo "Remove limesurvey and limesurvey.zip ?"
 read
 rm -rf limesurvey limesurvey.zip
